<resources>
    <string name="app_name">Media Playback</string>
    <string name="album_art_description">Album Art</string>
    <string name="song_title_placeholder">Song Title</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="loop_toggle">Loop</string>
    <string name="shuffle_toggle">Shuffle</string>
</resources>