<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/song_title_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_music"
        android:contentDescription="@string/album_art_description"
        app:layout_constraintTop_toBottomOf="@id/songTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/albumArt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/play_button"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stopButton"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"
        app:layout_constraintTop_toTopOf="@id/playPauseButton"
        app:layout_constraintStart_toEndOf="@id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@id/prevButton"/>

    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_button"
        app:layout_constraintTop_toTopOf="@id/stopButton"
        app:layout_constraintStart_toEndOf="@id/stopButton"
        app:layout_constraintEnd_toStartOf="@id/nextButton"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintTop_toTopOf="@id/prevButton"
        app:layout_constraintStart_toEndOf="@id/prevButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/loopToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loop_toggle"
        app:layout_constraintTop_toBottomOf="@id/playPauseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/shuffleToggle"/>

    <CheckBox
        android:id="@+id/shuffleToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle_toggle"
        app:layout_constraintTop_toTopOf="@id/loopToggle"
        app:layout_constraintStart_toEndOf="@id/loopToggle"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>